update swagger docs (#191)
